--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
             <ul class="icons">
                 <li><a href="https://www.linkedin.com/in/richard-savala-4305081b7/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="https://github.com/thrillhobaby" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                <li><a href="https://github.com/richardsavala" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
 
@@ -68,7 +68,7 @@
                     <a href="#" class="image fit"><img src="https://media2.giphy.com/media/fsq7WgIB2uxSOZZ1fO/giphy.gif" alt="gif-4" /></a>
                     <p>Demo video project with play / pause slider button and preloader gif.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/thrillhobaby/video" class="button">Full Code</a></li>
+                        <li><a href="https://github.com/richardsavala/video" class="button">Full Code</a></li>
                     </ul>
                 </article>
                 <article>
@@ -79,7 +79,7 @@
                     <a href="#" class="image fit"><img src="https://media0.giphy.com/media/sopIzRGAd1ichJjdKm/giphy.gif" alt="gif-1" /></a>
                     <p>Menu with dynamic nav bar to filter by category. Entries with a new category create a new filter button.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/thrillhobaby/menu" class="button">Full Code</a></li>
+                        <li><a href="https://github.com/richardsavala/menu" class="button">Full Code</a></li>
                     </ul>
                 </article>
                 <article>
@@ -90,7 +90,7 @@
                     <a href="#" class="image fit"><img src="https://media4.giphy.com/media/cs5EgdYXIiVZk5dYmZ/giphy.gif" alt="gif-2" /></a>
                     <p>Q & A page with local entries in lorem ipsum.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/thrillhobaby/counter" class="button">Full Code</a></li>
+                        <li><a href="https://github.com/richardsavala/questions" class="button">Full Code</a></li>
                     </ul>
                 </article>
                 <article>
@@ -101,7 +101,7 @@
                     <a href="#" class="image fit"><img src="https://media4.giphy.com/media/Yf8GGVsgAK3E85DO4I/giphy.gif" alt="gif-6" /></a>
                     <p>Create pop-ups with this responsive model modal with functional buttons.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/thrillhobaby/modal" class="button">Full Code</a></li>
+                        <li><a href="https://github.com/richardsavala/modal" class="button">Full Code</a></li>
                     </ul>
                 </article>
                 <article>
@@ -112,7 +112,7 @@
                     <a href="#" class="image fit"><img src="https://media4.giphy.com/media/ghrWWmYrwx2rPno6cH/giphy.gif" alt="gif-3" /></a>
                     <p>Showcase review entries in just a few clicks with a local lorem entries with previous, next, and random buttons.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/thrillhobaby/reviews" class="button">Full Code</a></li>
+                        <li><a href="https://github.com/richardsavala/reviews" class="button">Full Code</a></li>
                     </ul>
                 </article>
                 <article>
@@ -123,7 +123,7 @@
                     <a href="#" class="image fit"><img src="https://media0.giphy.com/media/LuLI0cBGDR4OE9ci9A/giphy.gif" alt="gif-5" /></a>
                     <p>Reactive side bar with social media icons and professional links in a reactive drop down menu.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/thrillhobaby/questions" class="button">Full Code</a></li>
+                        <li><a href="https://github.com/richardsavala/side-bar" class="button">Full Code</a></li>
                     </ul>
                 </article>
 
@@ -149,7 +149,7 @@
                     <h3>Social</h3>
                     <ul class="icons alt">
                         <li><a href="https://www.linkedin.com/in/richard-savala-4305081b7/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                        <li><a href="https://github.com/thrillhobaby" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+                        <li><a href="https://github.com/richardsavala" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
                     </ul>
                 </section>
             </section>
