--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </section>
                 <section>
                     <h3>Resume</h3>
-                    <p><a class="button" href="images/Purple Web Developer Resume.png">Check it out</a></p>
+                    <p><a class="button" href="images/RESUME.png">Check it out</a></p>
                 </section>
                 <section>
                     <h3>Social</h3>
