--- a/index.html
+++ b/index.html
@@ -62,10 +62,21 @@
             <section class="posts">
                 <article>
                     <header>
+                        <h2><a href="#">Freelance-Site</a><br /> </a>
+                        </h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/nsya0pJe58EgBbl51F/giphy.gif" alt="gif-1" /></a>
+                    <p>Campaign donation / info website made for an Idaho State Representative candidate.</p>
+                    <ul class="actions special">
+                        <li><a href="www.edwardsavaladistrict11.org" class="button">Full Site</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
                         <h2><a href="#">Video<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/fsq7WgIB2uxSOZZ1fO/giphy.gif" alt="gif-4" /></a>
+                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/fsq7WgIB2uxSOZZ1fO/giphy.gif" alt="gif-2" /></a>
                     <p>Demo video project with play / pause slider button and preloader gif.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/video" class="button">Full Code</a></li>
@@ -76,7 +87,7 @@
                         <h2><a href="#">Menu<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/sopIzRGAd1ichJjdKm/giphy.gif" alt="gif-1" /></a>
+                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/sopIzRGAd1ichJjdKm/giphy.gif" alt="gif-3" /></a>
                     <p>Menu with dynamic nav bar to filter by category. Entries with a new category create a new filter button.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/menu" class="button">Full Code</a></li>
@@ -87,7 +98,7 @@
                         <h2><a href="#">Q & A<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/cs5EgdYXIiVZk5dYmZ/giphy.gif" alt="gif-2" /></a>
+                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/cs5EgdYXIiVZk5dYmZ/giphy.gif" alt="gif-4" /></a>
                     <p>Q & A page with local entries in lorem ipsum.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/questions" class="button">Full Code</a></li>
@@ -98,7 +109,7 @@
                         <h2><a href="#">Modal<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/Yf8GGVsgAK3E85DO4I/giphy.gif" alt="gif-6" /></a>
+                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/Yf8GGVsgAK3E85DO4I/giphy.gif" alt="gif-5" /></a>
                     <p>Create pop-ups with this responsive model modal with functional buttons.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/modal" class="button">Full Code</a></li>
@@ -106,27 +117,15 @@
                 </article>
                 <article>
                     <header>
-                        <h2><a href="#">Reviews</a><br /> </a>
-                        </h2>
-                    </header>
-                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/ghrWWmYrwx2rPno6cH/giphy.gif" alt="gif-3" /></a>
-                    <p>Showcase review entries in just a few clicks with a local lorem entries with previous, next, and random buttons.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/richardsavala/reviews" class="button">Full Code</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
                         <h2><a href="#">Side-Bar<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/LuLI0cBGDR4OE9ci9A/giphy.gif" alt="gif-5" /></a>
+                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/LuLI0cBGDR4OE9ci9A/giphy.gif" alt="gif-6" /></a>
                     <p>Reactive side bar with social media icons and professional links in a reactive drop down menu.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/side-bar" class="button">Full Code</a></li>
                     </ul>
                 </article>
-
             </section>
 
             <!-- Footer -->
@@ -138,8 +137,8 @@
             <section class="split contact">
                 <section>
                     <h3>Email</h3>
-                    <ahref="https://www.gmail.com">richardsavala2@gmail.com</a>
-                        </p>
+                    <a href="https://www.gmail.com">richardsavala2@gmail.com</a>
+                    </p>
                 </section>
                 <section>
                     <h3>Resume</h3>
