--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <a href="#" class="image fit"><img src="https://media2.giphy.com/media/nsya0pJe58EgBbl51F/giphy.gif" alt="gif-1" /></a>
                     <p>Campaign donation / info website made for an Idaho State Representative candidate.</p>
                     <ul class="actions special">
-                        <li><a href="www.edwardsavaladistrict11.org" class="button">Full Site</a></li>
+                        <li><a href="https://www.edwardsavaladistrict11.org" class="button">Full Site</a></li>
                     </ul>
                 </article>
                 <article>
