--- a/index.html
+++ b/index.html
@@ -62,10 +62,21 @@
             <section class="posts">
                 <article>
                     <header>
-                        <h2><a href="#">Freelance-Site</a><br /> </a>
+                        <h2><a href="#">swartz-wedding<br />
+										</a></h2>
+                    </header>
+                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/G1L9xEACLzJ2BZGcIv/giphy.gif" alt="gif-1" /></a>
+                    <p>The Swartz' wedding landing page with responsive nav bar, includes RSVP & registry links.</p>
+                    <ul class="actions special">
+                        <li><a href="https://richardsavala.github.io/swartz-wedding/" class="button">Full Site</a></li>
+                    </ul>
+                </article>
+                <article>
+                    <header>
+                        <h2><a href="#">Campaign-Site</a><br /> </a>
                         </h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/nsya0pJe58EgBbl51F/giphy.gif" alt="gif-1" /></a>
+                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/nsya0pJe58EgBbl51F/giphy.gif" alt="gif-2" /></a>
                     <p>Campaign donation / info website made for an Idaho State Representative candidate.</p>
                     <ul class="actions special">
                         <li><a href="https://www.edwardsavaladistrict11.org" class="button">Full Site</a></li>
@@ -76,7 +87,7 @@
                         <h2><a href="#">Video<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/fsq7WgIB2uxSOZZ1fO/giphy.gif" alt="gif-2" /></a>
+                    <a href="#" class="image fit"><img src="https://media2.giphy.com/media/fsq7WgIB2uxSOZZ1fO/giphy.gif" alt="gif-3" /></a>
                     <p>Demo video project with play / pause slider button and preloader gif.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/video" class="button">Full Code</a></li>
@@ -87,7 +98,7 @@
                         <h2><a href="#">Menu<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/sopIzRGAd1ichJjdKm/giphy.gif" alt="gif-3" /></a>
+                    <a href="#" class="image fit"><img src="https://media0.giphy.com/media/sopIzRGAd1ichJjdKm/giphy.gif" alt="gif-4" /></a>
                     <p>Menu with dynamic nav bar to filter by category. Entries with a new category create a new filter button.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/menu" class="button">Full Code</a></li>
@@ -98,21 +109,10 @@
                         <h2><a href="#">Q & A<br />
 										</a></h2>
                     </header>
-                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/cs5EgdYXIiVZk5dYmZ/giphy.gif" alt="gif-4" /></a>
+                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/cs5EgdYXIiVZk5dYmZ/giphy.gif" alt="gif-5" /></a>
                     <p>Q & A page with local entries in lorem ipsum.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/richardsavala/questions" class="button">Full Code</a></li>
-                    </ul>
-                </article>
-                <article>
-                    <header>
-                        <h2><a href="#">Modal<br />
-										</a></h2>
-                    </header>
-                    <a href="#" class="image fit"><img src="https://media4.giphy.com/media/Yf8GGVsgAK3E85DO4I/giphy.gif" alt="gif-5" /></a>
-                    <p>Create pop-ups with this responsive model modal with functional buttons.</p>
-                    <ul class="actions special">
-                        <li><a href="https://github.com/richardsavala/modal" class="button">Full Code</a></li>
                     </ul>
                 </article>
                 <article>
